# ETL-markowitz

./: .gitignore  README.md  app.py  pyproject.toml
src/etl_markowitz/: azure_connector.py  extractor.py  settings.py  transformer.py
