[project]
name = "etl-markowitz"
version = "0.1.0"
description = ""
authors = [
    {name = "Paco de Oliveira Saavedra",email = "pacodeoliveirasaavedra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (==1.26.4)",
    "scipy (==1.11.4)",
    "streamlit (>=1.50.0,<2.0.0)",
    "pyportfolioopt (>=1.5.6,<2.0.0)",
    "plotly (<6)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[tool.poetry]
packages = [{include = "etl_markowitz", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
